--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,9 @@
     "paths": {
       "@/*": ["src/*"],
       "semantic-ui-css": ["node_modules/fomantic-ui-css"],
-      "mobx-react": ["node_modules/mobx-react-lite"]
+      "mobx-react": ["node_modules/mobx-react-lite"],
+      "lodash": ["node_modules/lodash-es"],
+      "markdown-it": ["node_modules/@esm-bundle/markdown-it"]
     }
   },
   "include": [
