refactor: repalce vite-plugin-dynamic-base with vite-plugin-public-path

--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@fontsource/ubuntu-mono": "^4.5.2",
     "@fontsource/zilla-slab": "^4.5.1",
     "@hackmd/markdown-it-task-lists": "^2.1.1",
-    "@swc/core": "^1.2.139",
     "@tanem/react-nprogress": "^4.0.7",
     "@types/blueimp-md5": "^2.18.0",
     "@types/chart.js": "^2.9.35",
@@ -128,10 +127,10 @@
     "validator": "^13.7.0",
     "vite": "^2.8.1",
     "vite-plugin-compile-time": "^0.1.2",
-    "vite-plugin-dynamic-base": "^0.0.3",
     "vite-plugin-ejs": "^1.4.3",
     "vite-plugin-html-minifier-terser": "^2.0.0",
     "vite-plugin-prismjs": "^0.0.8",
+    "vite-plugin-public-path": "^0.0.3",
     "wastyle": "^0.0.5",
     "web-streams-polyfill": "^3.2.0",
     "xss": "^1.0.10"
