--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@lyrio/ui",
   "version": "0.3.4",
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-decorators": "^7.17.2",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.18.9",
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@esm-bundle/markdown-it": "^12.3.2",
@@ -47,15 +47,15 @@
     "@types/ua-parser-js": "^0.7.36",
     "@types/uuid": "^8.3.4",
     "@types/validator": "^13.7.1",
-    "@vitejs/plugin-legacy": "^1.7.1",
-    "@vitejs/plugin-react": "^1.2.0",
+    "@vitejs/plugin-legacy": "^2.0.0",
+    "@vitejs/plugin-react": "^2.0.0",
     "ansi_up": "^5.1.0",
     "autotrack": "^2.4.1",
     "axios": "^0.26.0",
-    "babel-plugin-import": "^1.13.3",
+    "babel-plugin-import": "^1.13.5",
     "babel-plugin-prismjs": "^2.1.0",
     "blueimp-md5": "^2.19.0",
-    "browserslist-generator": "^1.0.65",
+    "browserslist-generator": "^1.0.66",
     "chart.js": "^3.7.1",
     "class-validator": "^0.13.2",
     "css": "^3.0.0",
@@ -116,6 +116,7 @@
     "streamsaver": "^2.0.6",
     "string-replace-to-array": "^2.1.0",
     "svgo": "^2.8.0",
+    "terser": "^5.14.2",
     "timeago.js": "^4.0.2",
     "twemoji": "^13.1.0",
     "typeface-lato": "^1.1.13",
@@ -125,12 +126,12 @@
     "use-debounce": "^7.0.1",
     "uuid": "^8.3.2",
     "validator": "^13.7.0",
-    "vite": "^2.8.1",
+    "vite": "^3.0.4",
     "vite-plugin-compile-time": "^0.1.2",
-    "vite-plugin-ejs": "^1.4.3",
-    "vite-plugin-html-minifier-terser": "^2.0.0",
+    "vite-plugin-ejs": "^1.5.0",
+    "vite-plugin-html-minifier-terser": "^2.0.3",
     "vite-plugin-prismjs": "^0.0.8",
-    "vite-plugin-public-path": "^0.0.3",
+    "vite-plugin-public-path": "^1.0.0",
     "wastyle": "^0.0.5",
     "web-streams-polyfill": "^3.2.0",
     "xss": "^1.0.10"
@@ -142,6 +143,9 @@
     "check-style": "prettier --ignore-path .gitignore --check \"**/*.{js,ts,tsx}\"",
     "generate-api": "node scripts/generate-api.js $API_HOST/docs-json && prettier --write \"src/api-generated/**/*.ts\"",
     "postinstall": "patch-package"
+  },
+  "resolutions": {
+    "esbuild": "0.14.51"
   },
   "eslintConfig": {
     "extends": "react-app"
