--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "vite-plugin-html-minifier-terser": "^2.0.3",
     "vite-plugin-prismjs": "^0.0.8",
     "vite-plugin-public-path": "^1.0.0",
+    "vite-plugin-static-copy": "^0.7.0",
     "wastyle": "^0.0.5",
     "web-streams-polyfill": "^3.2.1",
     "xss": "^1.0.13"
