--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "@lyrio/ui",
-  "version": "0.5.0",
+  "version": "0.4.4",
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-decorators": "^7.18.10",
-    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@babel/plugin-proposal-decorators": "^7.18.9",
     "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@esm-bundle/markdown-it": "^13.0.1",
     "@fontsource/dm-mono": "^4.5.8",
@@ -25,6 +24,7 @@
     "@fontsource/ubuntu-mono": "^4.5.10",
     "@fontsource/zilla-slab": "^4.5.8",
     "@hackmd/markdown-it-task-lists": "^2.1.1",
+    "@monaco-editor/react": "^4.4.5",
     "@tanem/react-nprogress": "^5.0.9",
     "@types/blueimp-md5": "^2.18.0",
     "@types/chart.js": "^2.9.37",
@@ -35,10 +35,10 @@
     "@types/js-yaml": "^4.0.5",
     "@types/lodash": "^4.14.182",
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "18.6.4",
+    "@types/node": "18.6.3",
     "@types/object-path": "^0.11.1",
     "@types/prismjs": "^1.26.0",
-    "@types/react": "^18.0.16",
+    "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/serialize-javascript": "^5.0.2",
     "@types/streamsaver": "^2.0.1",
@@ -46,7 +46,7 @@
     "@types/twemoji": "^13.1.2",
     "@types/ua-parser-js": "^0.7.36",
     "@types/uuid": "^8.3.4",
-    "@types/validator": "^13.7.5",
+    "@types/validator": "^13.7.4",
     "@vitejs/plugin-legacy": "^2.0.0",
     "@vitejs/plugin-react": "^2.0.0",
     "ansi_up": "^5.1.0",
@@ -56,7 +56,7 @@
     "babel-plugin-prismjs": "^2.1.0",
     "blueimp-md5": "^2.19.0",
     "browserslist-generator": "^1.0.66",
-    "chart.js": "^3.9.1",
+    "chart.js": "^3.8.2",
     "class-validator": "^0.13.2",
     "css": "^3.0.0",
     "css-element-queries": "^1.2.3",
@@ -65,9 +65,11 @@
     "cz-conventional-changelog": "3.3.0",
     "dayjs": "^1.11.4",
     "dtsgenerator": "2.7.0",
+    "esbuild-plugin-browserslist": "^0.4.13",
     "flat": "^5.0.2",
     "fomantic-ui-css": "^2.8.8",
     "fs-extra": "^10.1.0",
+    "getscript-promise": "^0.0.1",
     "gravatar": "^1.8.2",
     "hack-font": "source-foundry/Hack#1eddf94",
     "husky": "^8.0.1",
@@ -75,7 +77,7 @@
     "js-yaml": "^4.1.0",
     "jsondiffpatch": "^0.4.1",
     "less": "^4.1.3",
-    "lodash-es": "^4.17.21",
+    "lodash": "^4.17.21",
     "markdown-it-math-loose": "^4.1.1",
     "markdown-it-mentions": "^1.0.0",
     "markdown-it-merge-cells": "^1.0.1",
@@ -85,11 +87,11 @@
     "mobx-react-lite": "^3.4.0",
     "mobx-utils": "^6.0.5",
     "monaco-ace-tokenizer": "^0.2.2",
-    "monaco-editor": "0.34.0",
+    "monaco-editor": "0.33.0",
     "monaco-themes": "^0.4.2",
     "navi": "^0.15.0",
     "node-html-parser": "^5.3.3",
-    "noty": "^3.2.0-beta-deprecated",
+    "noty": "3.1.4",
     "object-path": "^0.11.8",
     "p-all": "^4.0.0",
     "patch-package": "^6.4.7",
@@ -97,7 +99,6 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.7.1",
     "prismjs": "^1.28.0",
-    "purgecss": "^4.1.3",
     "react": "^18.2.0",
     "react-chartjs-2": "4.3.1",
     "react-countdown": "^2.3.2",
@@ -105,10 +106,11 @@
     "react-google-recaptcha-v3": "^1.10.0",
     "react-helmet-async": "^1.3.0",
     "react-intl": "^6.0.5",
-    "react-monaco-editor": "0.49.0",
     "react-navi": "^0.15.0",
     "react-textarea-autosize": "^8.3.4",
     "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-visualizer": "^5.7.1",
+    "sass": "^1.54.4",
     "semantic-ui-react": "^2.1.3",
     "serialize-javascript": "^6.0.0",
     "sf-mono-webfont": "^1.0.0",
@@ -130,11 +132,10 @@
     "vite": "^3.0.4",
     "vite-plugin-compile-time": "^0.1.2",
     "vite-plugin-ejs": "^1.5.0",
+    "vite-plugin-externals": "^0.5.1",
     "vite-plugin-html-minifier-terser": "^2.0.3",
     "vite-plugin-prismjs": "^0.0.8",
     "vite-plugin-public-path": "^1.0.0",
-    "vite-plugin-purgecss": "^0.2.12",
-    "vite-plugin-static-copy": "^0.7.0",
     "wastyle": "^0.0.5",
     "web-streams-polyfill": "^3.2.1",
     "xss": "^1.0.13"
