--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.7.1",
     "prismjs": "^1.28.0",
+    "purgecss": "^4.1.3",
     "react": "^18.2.0",
     "react-chartjs-2": "4.3.1",
     "react-countdown": "^2.3.2",
@@ -136,6 +137,7 @@
     "vite-plugin-html-minifier-terser": "^2.0.3",
     "vite-plugin-prismjs": "^0.0.8",
     "vite-plugin-public-path": "^1.0.0",
+    "vite-plugin-purgecss": "^0.2.12",
     "wastyle": "^0.0.5",
     "web-streams-polyfill": "^3.2.1",
     "xss": "^1.0.13"
