--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "sass": "^1.54.4",
     "semantic-ui-react": "^2.1.3",
     "serialize-javascript": "^6.0.0",
+    "serve": "^14.0.1",
     "sf-mono-webfont": "^1.0.0",
     "socket.io-client": "^4.5.1",
     "socket.io-msgpack-parser": "^3.0.1",
